--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,34 +1,33 @@
-<!DOCTYPE html>
-<htmal lang = "ja">
-  <body>
-    <p id="notice">
-    <%=  notice %>
-    </p>
-    <h3>Books</h3>
-    <table>
-    <tr>
-      <th>Title</th><th>Body</th>
-    </tr>
-    <% @books.each do |book| %>
-    <tr>
-      <td><%= book.title %></td>
-      <td><%= book.body %></td>
-      <td>
-        <%= link_to "show", book_path(book.id) %>
-        <%= link_to "edit", edit_book_path(book.id) %>
-        <%= link_to "destroy", book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %>
-      </td>
-    </tr>
-    <% end %>
-    </table>
+<p id="notice">
+<%=  notice %>
+</p>
+  <h3>Books</h3>
+  <table>
+  <tr>
+    <th>Title</th><th>Body</th>
+  </tr>
+  <% @books.each do |book| %>
+  <tr>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+    <td>
+      <%= link_to "show", book_path(book.id) %>
+      <%= link_to "edit", edit_book_path(book.id) %>
+      <%= link_to "destroy", book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %>
+    </td>
+  </tr>
+  <% end %>
+  </table>
 
-    <h3>New book</h3>
-    <%= form_with model:@book, local:true do |f| %>
-      <h4>Title</h4>
-      <%= f.text_field :title %>
-      <h4>Body</h4>
-      <%= f.text_area :body %>
-      <%= f.submit 'Create Book' %>
-    <% end %>
-  </body>
-</htmal>
+  <h2>New book</h2>
+  
+<%= form_with model:@book, local:true do |f| %>
+
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %></br>
+
+  <%= f.submit 'Create Book' %>
+<% end %>
