--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,13 +13,34 @@
  *= require_tree .
  *= require_self
  */
-  * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: #6c6b6b;
   }
-
-  h1 {
-    color: black
+header {
+  width: 342px;
+  height: 31px;
+  font-size: 26px;
+  margin: 18px;
+  color: black
   }
+
+h3 {
+  margin: 18px;
+  font-size: 26px
+}
+
+p {
+  font-size: 13px;
+  margin: 33px;
+}
+
+.th {
+  font-size: 13px;
+  line-height: 18px;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
