--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/a43f139ecb.js" crossorigin="anonymous"></script>"
+    <script src="https://kit.fontawesome.com/a43f139ecb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="application.css" />
+    <title>Bookers</title>
   </head>
-  <h1>ようこそ Bookers へ！</h1>
-  <p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
-  <p>印象を共有し交換することができます</p>
-  <p><a href="/books">start</a></p>
+  <header>ようこそ <strong>Bookers</strong> へ！</header>
+  <body>
+    <p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
+    <p>印象を共有し交換することができます</p>
+      <p><a href="/books">start</a></p>
+  </body>
 </html>
