--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,18 +1,20 @@
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>errors prohibited this book from being saved:
-  <% @book.errors.full_messages.each do |message| %>
+  <div class="errors_count"><%= @book.errors.count %>errors prohibited this book from being saved:</div></br>
+    <% @book.errors.full_messages.each do |message| %>
     <%= message %>
   <% end %>
 <% end %>
 
 <%= form_with model:@book, local: true do |f| %>
   <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
-  <%= link_to "show", book_path(@book) %>
-  <%= link_to "Back", "/books" %>
-<% end %>
+    <div class="title_field"><%= f.text_field :title %></div>
+    <h4>Body</h4>
+    <div class="body_area"><%= f.text_area :body %><br></div></br>
+    <div class="update_book"><%= f.submit 'Update Book' %></div>
+    <% end %>
+    </br>
+
+    <%= link_to "show", book_path(@book) %>
+    <%= link_to "Back", "/books" %>
