--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,40 +1,53 @@
-<p id="notice">
-<%=  notice %>
-</p>
-  <h3>Books</h3>
-  <table>
-  <tr>
-    <th>Title</th><th>Body</th>
-  </tr>
-  <% @books.each do |book| %>
-  <tr>
-    <td><%= book.title %></td>
-    <td><%= book.body %></td>
-    <td>
-      <%= link_to "show", book_path(book.id) %>
-      <%= link_to "edit", edit_book_path(book.id) %>
-      <%= link_to "destroy", book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %>
-    </td>
-  </tr>
-  <% end %>
-  </table>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/a43f139ecb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="application.css" />
+    <title>Bookers</title>
+  </head>
+  <body>
+    <p id="notice">
+    <%=  notice %>
+    </p>
+    <h1>Books</h1>
+    <table>
+      <thead>
+         <tr>
+           <th>Title</th>
+           <th>Body</th>
+          </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td><%= link_to "show", book_path(book.id) %></td>
+          <td><%= link_to "edit", edit_book_path(book.id) %></td>
+          <td><%= link_to "destroy", book_path(book), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-  <h2>New book</h2>
+    <h2>New book</h2>
 
-  <% if @book.errors.any? %>
-    <%= @book.errors.count %>errors prohibited this book from being saved:
-    <% @book.errors.full_messages.each do |message| %>
-      <%= message %>
+    <% if @book.errors.any? %>
+      <div class="errors_count"><%= @book.errors.count %>errors prohibited this book from being saved:</div></br>
+        <% @book.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
     <% end %>
-  <% end %>
 
-  <%= form_with model:@book, local:true do |f| %>
+    <%= form_with model:@book, local:true do |f| %>
+    <h4>Title</h4>
+    <div class="title_field"><%= f.text_field :title %></div>
+    <h4>Body</h4>
+    <div class="body_area"><%= f.text_area :body %><br></div>
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
-<% end %>
+    <div class="create_book"><%= f.submit 'Create Book' %></div>
+    <% end %>
+  </body>
+</html>
