--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="application.css" />
     <title>Bookers</title>
   </head>
-  <header>ようこそ <strong>Bookers</strong> へ！</header>
   <body>
+    <h1>ようこそ <strong>Bookers</strong> へ！</h1>
     <p>Bookers では、さまざまな書籍に関するあなたの意見や</p>
     <p>印象を共有し交換することができます</p>
       <p><a href="/books">start</a></p>
