--- a/app/views/layouts/error_message.html.erb
+++ b/app/views/layouts/error_message.html.erb
@@ -1,4 +1,5 @@
 <% if @book.errors.any? %>
+<!--any?→@bookの各要素に1つでもerrorが含まれていればtrue-->
   <div class="alert alert-warning">
     <ul>
       <% @book.errors.full_messages.each do |message| %>
